<resources>
    <string name="app_name">15LT</string>
    <string name="logout_button_text">Logout</string>
    <string name="title_activity_vote">VoteActivity</string>

    <string name="Monday">MONDAY</string>
    <string name="Tuesday">TUESDAY</string>
    <string name="Wednesday">WEDNESDAY</string>
    <string name="Thursday">THURSDAY</string>
    <string name="Friday">FRIDAY</string>
    <string name="Saturday">SATURDAY</string>
    <string name="Sunday">SUNDAY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_vote_movie">Vote for a Movie</string>
    <string name="title_activity_vote_misc">vote_misc</string>
    <string name="title_activity_nav_drawer">15LT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_food">Food</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_misc">Misc</string>
    <string name="menu_about">About</string>
    <string name="menu_send">Send</string>
    <string name="nav_title_submenu">Accessability</string>
    <string name="Address">15 Liffey Terrace\nLiffey Valley Park\nLucan\nCo. Dublin\nK78 E278</string>
    <string name="alarm_code">Alarm Code : 4854</string>
    <string name="app_version">App Version : 0.1.0</string>
    <string name="changelog">Changelog : \n-New Logo \n-Theme changes\n-Added Navigation Bar \n-An Easter Egg\n-Shopping, Misc, About sections\n-One step closer to production</string>
    <string name="fragment_shopping_no_items">Its empty here  Add Items by clicking on the  Orange Button below...</string>
</resources>
