<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weekdays">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_weekdays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_weekdays"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        >


        <Button
            android:id="@+id/Sunday"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Sunday"
            android:textColor="@color/textPrimary"
            android:onClick="launchVote"
            />

        <Button
            android:id="@+id/Monday"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Monday"
            android:textColor="@color/textPrimary"
            android:onClick="launchVote"
            />

        <Button
            android:id="@+id/Tuesday"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Tuesday"
            android:textColor="@color/textPrimary"
            android:onClick="launchVote"
            />


        <Button
            android:id="@+id/Wednesday"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Wednesday"
            android:textColor="@color/textPrimary"
            android:onClick="launchVote"
            />

        <Button
            android:id="@+id/Thursday"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Thursday"
            android:textColor="@color/textPrimary"
            android:onClick="launchVote"
            />

        <Button
            android:id="@+id/Friday"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Friday"
            android:textColor="@color/textPrimary"
            android:onClick="launchVote"
            />

        <Button
            android:id="@+id/Saturday"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Saturday"
            android:textColor="@color/textPrimary"
            android:onClick="launchVote"
            />



    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>